--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h1 class="text-4xl md:text-7xl font-bold mb-6 italic leading-tight">SANACIÓN DE LAS<br>FRACTURAS DEL ALMA</h1>
             <div class="w-32 h-px bg-stone-600 mx-auto my-8"></div>
             <p class="text-lg md:text-xl text-stone-400 max-w-2xl mx-auto italic">
-                Acompañamiento espiritual y restauración de la integridad vital por Gastón Burgos.
+                Acompañamiento espiritual y restauración de la integridad vital por Ignacio Digas.
             </p>
         </div>
     </header>
@@ -119,12 +119,12 @@
                     <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2010hs%20para%20Chamanismo" class="bg-stone-800 text-stone-300 px-6 py-2 text-[10px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
                 </div>
 
-                <div class="turno-card turno-ocupado p-8 flex justify-between items-center">
+                <div class="turno-card turno-disponible p-8 flex justify-between items-center">
                     <div>
                         <p class="text-stone-500 text-[10px] font-bold uppercase tracking-widest mb-1">Turno Mañana</p>
                         <p class="text-2xl font-bold text-white uppercase italic">11:00 HS</p>
                     </div>
-                    <span class="text-[10px] font-bold uppercase tracking-widest">No Disponible</span>
+                    <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2011hs%20para%20Chamanismo" class="bg-stone-800 text-stone-300 px-6 py-2 text-[10px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
                 </div>
 
                 <div class="turno-card turno-disponible p-8 flex justify-between items-center">
