--- a/index.html
+++ b/index.html
@@ -170,7 +170,19 @@
             <p class="text-xs font-bold uppercase tracking-widest text-stone-500 mb-2">Sede Lanús Oeste Centro</p>
             <p class="text-stone-400 text-sm">Gdor. Carlos Tejedor 335, Lanús.</p>
         </div>
-        <p class="text-[9px] text-stone-600 uppercase tracking-widest font-bold">© 2026 Sanación Chamánica | Tradición & Poder</p>
+
+        <div class="border-t border-white/5 pt-16 mt-16">
+            <h3 class="text-[10px] uppercase tracking-[0.6em] text-stone-600 mb-10 font-bold italic">ECOSISTEMA INYO</h3>
+            <div class="flex flex-wrap justify-center gap-10 italic text-stone-500 text-[10px] font-bold tracking-widest">
+                <a href="https://inyodo.github.io/masaje-japones-/" class="hover:text-white transition underline underline-offset-8">Masaje Japonés</a>
+                <a href="https://inyodo.github.io/hiit-calistenia/" class="hover:text-white transition underline underline-offset-8">HIIT Calistenia</a>
+                <a href="https://inyodo.github.io/espacio-inyo-web/yoga.html" class="hover:text-white transition underline underline-offset-8">Clases de Yoga</a>
+                <a href="https://www.holayoga.com.ar/" target="_blank" class="hover:text-white transition underline underline-offset-8">Coaching Online</a>
+                <a href="https://inyodo.github.io/espacio-inyo-web/zen-stretching.html" class="hover:text-white transition underline underline-offset-8">Zen Stretching</a>
+                <a href="https://inyodo.github.io/espacio-inyo-web/artes-marciales.html" class="hover:text-white transition underline underline-offset-8">Artes Marciales</a>
+            </div>
+            <p class="mt-20 text-[9px] text-stone-600 uppercase tracking-widest font-bold">© 2026 Sanación Chamánica | Tradición & Poder</p>
+        </div>
     </footer>
 
     <a href="https://wa.me/541176194825" class="fixed bottom-8 right-8 bg-[#25d366]/20 backdrop-blur-sm text-white w-14 h-14 rounded-full shadow-2xl flex items-center justify-center text-2xl hover:bg-[#25d366] hover:scale-110 transition-all duration-300 z-50 border border-white/10">
