--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body class="antialiased">
 <audio id="bgMusic" loop>
-    <source src="audio/Entre los árboles.mp3" type="audio/mpeg">
+    <source src="audio/entre-los-arboles.mp3" type="audio/mpeg">
 </audio>
     <input type="checkbox" id="menu-toggle" class="hidden">
     <label for="menu-toggle" class="fixed top-6 left-6 z-50 cursor-pointer bg-stone-900/50 backdrop-blur-md p-3 rounded-sm border border-stone-800 hover:bg-stone-700 transition duration-300 text-white">
