--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <li><a href="https://inyodo.github.io/espacio-inyo-web/yoga.html" class="block hover:text-stone-100 transition">Clases de Yoga</a></li>
                 <li><a href="https://www.holayoga.com.ar/" target="_blank" class="block hover:text-stone-100 transition">Coaching Online</a></li>
                 <li><a href="https://inyodo.github.io/espacio-inyo-web/zen-stretching.html" class="block hover:text-stone-100 transition">Zen Stretching</a></li>
-                <li><a href="https://inyodo.github.io/Qigong/" class="block hover:text-stone-100 transition text-stone-400">Qigong</a></li>
+                <li><a href="https://inyodo.github.io/Qigong/" class="block hover:text-stone-100 transition">Qigong</a></li>
                 <li><a href="https://inyodo.github.io/espacio-inyo-web/artes-marciales.html" class="block hover:text-stone-100 transition">Artes Marciales</a></li>
                 <li><a href="#" class="block text-white font-bold underline underline-offset-8">Chamanismo</a></li>
             </ul>
@@ -182,7 +182,7 @@
                 <a href="https://inyodo.github.io/espacio-inyo-web/yoga.html" class="hover:text-white transition underline underline-offset-8">Clases de Yoga</a>
                 <a href="https://www.holayoga.com.ar/" target="_blank" class="hover:text-white transition underline underline-offset-8">Coaching Online</a>
                 <a href="https://inyodo.github.io/espacio-inyo-web/zen-stretching.html" class="hover:text-white transition underline underline-offset-8">Zen Stretching</a>
-                <a href="https://inyodo.github.io/Qigong/" class="hover:text-white transition underline underline-offset-8 decoration-white/5">Qigong</a>
+                <a href="https://inyodo.github.io/Qigong/" class="hover:text-white transition underline underline-offset-8">Qigong</a>
                 <a href="https://inyodo.github.io/espacio-inyo-web/artes-marciales.html" class="hover:text-white transition underline underline-offset-8">Artes Marciales</a>
             </div>
             <p class="mt-20 text-[9px] text-stone-600 uppercase tracking-widest font-bold">© 2026 Sanación Chamánica | Tradición & Poder</p>
