--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
                     <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2013hs%20para%20Chamanismo" class="bg-stone-800 text-stone-300 px-6 py-2 text-[10px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
                 </div>
 
-                <div class="turno-card turno-disponible p-8 flex justify-between items-center">
-                    <div>
-                        <p class="text-stone-500 text-[10px] font-bold uppercase tracking-widest mb-1">Turno Tarde</p>
-                        <p class="text-2xl font-bold text-white uppercase italic">14:00 HS</p>
-                    </div>
-                    <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2014hs%20para%20Chamanismo" class="bg-stone-800 text-stone-300 px-6 py-2 text-[10px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
-                </div>
+                <div class="turno-card turno-ocupado p-8 flex justify-between items-center">
+    <div>
+        <p class="text-stone-500 text-[10px] font-bold uppercase tracking-widest mb-1">Turno Mañana</p>
+        <p class="text-2xl font-bold text-white uppercase italic">14:00 HS</p>
+    </div>
+    <span class="bg-stone-900 text-stone-600 px-6 py-2 text-[10px] font-bold uppercase tracking-widest cursor-not-allowed">Ocupado</span>
+</div>
 
                 <div class="turno-card turno-ocupado p-8 flex justify-between items-center">
                     <div>
