--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         
         #menu-toggle:checked ~ #side-menu { transform: translateX(0); }
         #menu-toggle:checked ~ #menu-overlay { display: block; }
+        @keyframes breathe-gold {
+            0% { box-shadow: 0 0 0 0 rgba(138, 116, 77, 0.4); border-color: rgba(138, 116, 77, 0.5); }
+            50% { box-shadow: 0 0 20px 5px rgba(138, 116, 77, 0.2); border-color: rgba(138, 116, 77, 1); }
+            100% { box-shadow: 0 0 0 0 rgba(138, 116, 77, 0.4); border-color: rgba(138, 116, 77, 0.5); }
+        }
+        .animate-breathe { animation: breathe-gold 4s ease-in-out infinite; }
     </style>
 </head>
 <body class="antialiased">
