--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         .hero-chamanismo { 
             background: linear-gradient(rgba(12, 10, 9, 0.8), rgba(12, 10, 9, 0.95)), 
-            url('https://images.unsplash.com/photo-1518398046578-8cca57782e17?auto=format&fit=crop&w=1470&q=80'); 
+            url('imagenes/foliage-stem-bamboo-green-outdoor.jpg'); 
             background-size: cover; background-position: center; min-height: 90vh;
         }
 
