--- a/index.html
+++ b/index.html
@@ -109,55 +109,110 @@
     <section id="turnos" class="py-24 px-6">
         <div class="max-w-4xl mx-auto">
             <h2 class="text-center text-4xl mb-4 italic uppercase font-bold text-white">Reserva de sesiones</h2>
-            <p class="text-center text-stone-500 text-sm mb-16 italic tracking-widest uppercase">Sábado 28 de Febrero: Mañana y Tarde</p>
+            <p class="text-center text-stone-500 text-sm mb-12 italic tracking-widest uppercase">Próximas Fechas Disponibles</p>
 
-            <div class="grid md:grid-cols-2 gap-6 mb-16">
-                <div class="turno-card turno-ocupado p-8 flex justify-between items-center">
-                    <div>
-                        <p class="text-stone-500 text-[10px] font-bold uppercase tracking-widest mb-1">Turno Mañana</p>
-                        <p class="text-2xl font-bold text-white uppercase italic">10:00 HS</p>
-                    </div>
-                    <span class="bg-stone-900 text-stone-600 px-6 py-2 text-[10px] font-bold uppercase tracking-widest cursor-not-allowed">Ocupado</span>
+            <div class="flex flex-col md:flex-row justify-center gap-8 md:gap-16 mb-16 text-stone-400 italic text-sm text-center">
+                <div class="flex items-center justify-center gap-3">
+                    <i class="fa-solid fa-house-chimney text-stone-600"></i>
+                    <span>Sesiones Presenciales (Lanús)</span>
                 </div>
-
-                <div class="turno-card turno-disponible p-8 flex justify-between items-center">
-                    <div>
-                        <p class="text-stone-500 text-[10px] font-bold uppercase tracking-widest mb-1">Turno Mañana</p>
-                        <p class="text-2xl font-bold text-white uppercase italic">11:00 HS</p>
-                    </div>
-                    <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2011hs%20para%20Chamanismo" class="bg-stone-800 text-stone-300 px-6 py-2 text-[10px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
+                <div class="flex items-center justify-center gap-3">
+                    <i class="fa-solid fa-earth-americas text-stone-600"></i>
+                    <span>Sesiones a Distancia (Videollamada)</span>
                 </div>
+            </div>
 
-                <div class="turno-card turno-disponible p-8 flex justify-between items-center">
-                    <div>
-                        <p class="text-stone-500 text-[10px] font-bold uppercase tracking-widest mb-1">Turno Mañana</p>
-                        <p class="text-2xl font-bold text-white uppercase italic">12:00 HS</p>
+            <div class="mb-20">
+                <h3 class="text-stone-300 text-lg mb-8 border-b border-stone-800 pb-2 italic uppercase tracking-widest">Sábado 28 de Febrero</h3>
+                <div class="grid md:grid-cols-2 gap-4">
+                    <div class="turno-card turno-ocupado p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">10:00 HS</p>
+                        <span class="bg-stone-900 text-stone-600 px-4 py-1 text-[9px] font-bold uppercase tracking-widest">Ocupado</span>
                     </div>
-                    <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2012hs%20para%20Chamanismo" class="bg-stone-800 text-stone-300 px-6 py-2 text-[10px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
+                    <div class="turno-card turno-disponible p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">11:00 HS</p>
+                        <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2011hs%20para%20el%20sabado%2028%20de%20Febrero%20y%20me%20gustaria%20que%20sea%20(Presencial%20/%20A%20distancia)" class="bg-stone-800 text-stone-300 px-4 py-1 text-[9px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
+                    </div>
+                    <div class="turno-card turno-disponible p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">12:00 HS</p>
+                        <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2012hs%20para%20el%20sabado%2028%20de%20Febrero%20y%20me%20gustaria%20que%20sea%20(Presencial%20/%20A%20distancia)" class="bg-stone-800 text-stone-300 px-4 py-1 text-[9px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
+                    </div>
+                    <div class="turno-card turno-ocupado p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">13:00 HS</p>
+                        <span class="bg-stone-900 text-stone-600 px-4 py-1 text-[9px] font-bold uppercase tracking-widest">Ocupado</span>
+                    </div>
+                    <div class="turno-card turno-ocupado p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">14:00 HS</p>
+                        <span class="bg-stone-900 text-stone-600 px-4 py-1 text-[9px] font-bold uppercase tracking-widest">Ocupado</span>
+                    </div>
+                    <div class="turno-card turno-ocupado p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">15:00 HS</p>
+                        <span class="bg-stone-900 text-stone-600 px-4 py-1 text-[9px] font-bold uppercase tracking-widest">Ocupado</span>
+                    </div>
                 </div>
+            </div>
 
-                <div class="turno-card turno-ocupado p-8 flex justify-between items-center">
-                    <div>
-                        <p class="text-stone-500 text-[10px] font-bold uppercase tracking-widest mb-1">Turno Mañana</p>
-                        <p class="text-2xl font-bold text-white uppercase italic">13:00 HS</p>
+            <div class="mb-20">
+                <h3 class="text-stone-300 text-lg mb-8 border-b border-stone-800 pb-2 italic uppercase tracking-widest">Sábado 14 de Marzo</h3>
+                <div class="grid md:grid-cols-2 gap-4">
+                    <div class="turno-card turno-ocupado p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">12:00 HS</p>
+                        <span class="bg-stone-900 text-stone-600 px-4 py-1 text-[9px] font-bold uppercase tracking-widest">Ocupado</span>
                     </div>
-                    <span class="bg-stone-900 text-stone-600 px-6 py-2 text-[10px] font-bold uppercase tracking-widest cursor-not-allowed">Ocupado</span>
+                    <div class="turno-card turno-ocupado p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">13:00 HS</p>
+                        <span class="bg-stone-900 text-stone-600 px-4 py-1 text-[9px] font-bold uppercase tracking-widest">Ocupado</span>
+                    </div>
+                    <div class="turno-card turno-ocupado p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">14:00 HS</p>
+                        <span class="bg-stone-900 text-stone-600 px-4 py-1 text-[9px] font-bold uppercase tracking-widest">Ocupado</span>
+                    </div>
+                    <div class="turno-card turno-ocupado p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">15:00 HS</p>
+                        <span class="bg-stone-900 text-stone-600 px-4 py-1 text-[9px] font-bold uppercase tracking-widest">Ocupado</span>
+                    </div>
+                    <div class="turno-card turno-disponible p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">16:00 HS</p>
+                        <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2016hs%20para%20el%20sabado%2014%20de%20Marzo%20y%20me%20gustaria%20que%20sea%20(Presencial%20/%20A%20distancia)" class="bg-stone-800 text-stone-300 px-4 py-1 text-[9px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
+                    </div>
+                    <div class="turno-card turno-disponible p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">17:00 HS</p>
+                        <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2017hs%20para%20el%20sabado%2014%20de%20Marzo%20y%20me%20gustaria%20que%20sea%20(Presencial%20/%20A%20distancia)" class="bg-stone-800 text-stone-300 px-4 py-1 text-[9px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
+                    </div>
+                    <div class="turno-card turno-disponible p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">18:00 HS</p>
+                        <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2018hs%20para%20el%20sabado%2014%20de%20Marzo%20y%20me%20gustaria%20que%20sea%20(Presencial%20/%20A%20distancia)" class="bg-stone-800 text-stone-300 px-4 py-1 text-[9px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
+                    </div>
                 </div>
+            </div>
 
-                <div class="turno-card turno-ocupado p-8 flex justify-between items-center">
-    <div>
-        <p class="text-stone-500 text-[10px] font-bold uppercase tracking-widest mb-1">Turno Mañana</p>
-        <p class="text-2xl font-bold text-white uppercase italic">14:00 HS</p>
-    </div>
-    <span class="bg-stone-900 text-stone-600 px-6 py-2 text-[10px] font-bold uppercase tracking-widest cursor-not-allowed">Ocupado</span>
-</div>
-
-                <div class="turno-card turno-ocupado p-8 flex justify-between items-center">
-                    <div>
-                        <p class="text-stone-500 text-[10px] font-bold uppercase tracking-widest mb-1">Turno Tarde</p>
-                        <p class="text-2xl font-bold text-white uppercase italic">15:00 HS</p>
+            <div class="mb-16">
+                <h3 class="text-stone-300 text-lg mb-8 border-b border-stone-800 pb-2 italic uppercase tracking-widest">Sábado 28 de Marzo</h3>
+                <div class="grid md:grid-cols-2 gap-4">
+                    <div class="turno-card turno-disponible p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">10:00 HS</p>
+                        <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2010hs%20para%20el%20sabado%2028%20de%20Marzo%20y%20me%20gustaria%20que%20sea%20(Presencial%20/%20A%20distancia)" class="bg-stone-800 text-stone-300 px-4 py-1 text-[9px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
                     </div>
-                    <span class="bg-stone-900 text-stone-600 px-6 py-2 text-[10px] font-bold uppercase tracking-widest cursor-not-allowed">Ocupado</span>
+                    <div class="turno-card turno-disponible p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">11:00 HS</p>
+                        <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2011hs%20para%20el%20sabado%2028%20de%20Marzo%20y%20me%20gustaria%20que%20sea%20(Presencial%20/%20A%20distancia)" class="bg-stone-800 text-stone-300 px-4 py-1 text-[9px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
+                    </div>
+                    <div class="turno-card turno-disponible p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">12:00 HS</p>
+                        <a href="https://wa.me/541176194825?text=Hola%20Gaston,%20quisiera%20reservar%20el%20turno%20de%20las%2012hs%20para%20el%20sabado%2028%20de%20Marzo%20y%20me%20gustaria%20que%20sea%20(Presencial%20/%20A%20distancia)" class="bg-stone-800 text-stone-300 px-4 py-1 text-[9px] font-bold uppercase tracking-widest hover:bg-stone-700 transition">Solicitar</a>
+                    </div>
+                    <div class="turno-card turno-ocupado p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">13:00 HS</p>
+                        <span class="bg-stone-900 text-stone-600 px-4 py-1 text-[9px] font-bold uppercase tracking-widest">Ocupado</span>
+                    </div>
+                    <div class="turno-card turno-ocupado p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">14:00 HS</p>
+                        <span class="bg-stone-900 text-stone-600 px-4 py-1 text-[9px] font-bold uppercase tracking-widest">Ocupado</span>
+                    </div>
+                    <div class="turno-card turno-ocupado p-6 flex justify-between items-center">
+                        <p class="text-xl font-bold text-white uppercase italic">15:00 HS</p>
+                        <span class="bg-stone-900 text-stone-600 px-4 py-1 text-[9px] font-bold uppercase tracking-widest">Ocupado</span>
+                    </div>
                 </div>
             </div>
 
